--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ h2,
 h3,
 h4,
 h5,
+h6,
 p {
   margin: 0;
 }
@@ -103,6 +104,10 @@ header .container {
   padding-left: 371px;
 }
 
+.header-contacts li:hover {
+  fill: #2196f3;
+}
+
 .nav-link {
   text-decoration: none;
   color: var(--basic-text);
@@ -116,8 +121,14 @@ header .container {
 /* main */
 .order-section {
   background-color: var(--bcg-main-footer);
+  background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%),
+    url('/images/background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
   text-align: center;
   padding: 200px 452px;
+  border: 1px solid rgba(0, 0, 0, 1);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .title {
@@ -175,6 +186,7 @@ header .container {
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.03em;
+  padding-top: 30px;
 }
 
 .main-description-text {
@@ -208,7 +220,7 @@ header .container {
 
 .team-section-li {
   width: 270px;
-  height: 368px;
+  /* height: 428px; */
   background-color: var(--bcg-photo);
   text-align: center;
 
@@ -245,6 +257,28 @@ header .container {
 }
 
 /* footer */
+.footer-style .container {
+  display: flex;
+}
+
+.footer-left {
+  width: 250px;
+  margin-right: 70px;
+}
+
+.footer-right {
+  width: 206px;
+  padding-top: 12px;
+}
+
+h6 {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  color: white;
+}
+
 .footer-style {
   background-color: var(--bcg-main-footer);
   padding-top: 60px;
@@ -301,6 +335,21 @@ header .container {
 .footer-contact-link:hover,
 .footer-contact-link:focus {
   color: var(--element-focus);
+}
+
+.website-social-links {
+  padding-top: 20px;
+  justify-content: space-between;
+}
+
+.website-social-icon {
+  fill: white;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.website-social-icon:hover {
+  background-color: #2196f3;
 }
 
 /* portfolio.html */
@@ -393,4 +442,24 @@ header .container {
 .icon:hover {
   fill: #2196f3;
   border: #2196f3 solid 1px;
+}
+
+.social-links {
+  padding-top: 16px;
+  justify-content: center;
+}
+
+.social-links li:not(:last-child) {
+  padding-right: 10px;
+}
+
+.social-icon {
+  fill: rgba(175, 177, 184, 1);
+
+  border-radius: 50%;
+}
+
+.social-icon:hover {
+  fill: white;
+  background-color: #2196f3;
 }
