--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,11 @@
   box-sizing: border-box;
 }
 body {
-  width: 1600px;
+  width: 100%;
   background-color: var(--bcg-color);
   font-family: 'Roboto';
   color: var(--basic-text);
+  margin: 0 auto;
 }
 
 :root {
@@ -123,8 +124,15 @@ header .container {
 }
 
 /* main */
-.order-section {
+.background-strap {
+  width: 100%;
   background-color: var(--bcg-main-footer);
+}
+
+.order-section {
+  width: 1600px;
+  margin: 0 auto;
+
   background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%),
     url('../images/background.jpg');
   background-repeat: no-repeat;
@@ -132,7 +140,6 @@ header .container {
   text-align: center;
   padding: 200px 452px;
   border: 1px solid rgba(0, 0, 0, 1);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .title {
